# streams_explicaciones

./: Readme.md  add_image_to_tkinter_19_09_2023.py  linked_lists.py  pyproject.toml  speech_recognition_19_09_2023.py
