[tool.poetry]
name = "streams-explicaciones"
version = "0.1.0"
description = ""
authors = ["Lokixin <dimasavilamartinez@gmail.com>"]
readme = "README.md"
packages = [{include = "streams_explicaciones"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
